# commons

./: .gitignore  README.md  after_canvas_click.png.import  after_click.png.import  after_reconnect.png.import  after_walk.png.import  back_in_shrine.png.import  commons-2.png.import  commons-3.png.import  commons-4.png.import  commons-xpra.png.import  current_state.png.import  editor_attempt.png.import  editor_closed.png.import  editor_open2.png.import  export_presets.cfg  f2_pressed.png.import  f2_v2.png.import  fade-after.png.import  fade-during.png.import  final_state.png.import  freeland-2.png.import  freeland-4.png.import  freeland-xpra.png.import  fresh_start.png.import  game_art_preview.png.import  game_loaded2.png.import  game_ready.png.import  game_reloaded.png.import  game_startup.png.import  game_v3.png.import  holding_right.png.import  hud_bg_test.png.import  hud_clear.png.import  icon.svg.import  mid_sequence.png.import  moved_right.png.import  outside_shrine.png.import  outside_shrine2.png.import  persist-before.png.import  (+24 more)
.playwright-mcp/: page-2026-04-14T02-27-43-297Z.yml  page-2026-04-14T02-30-37-827Z.yml  page-2026-04-14T02-30-48-024Z.yml  page-2026-04-14T02-30-54-031Z.yml
autoloads/: Backend.gd  ChatSystem.gd  Constants.gd  CoordUtils.gd  DayClock.gd  ErrorReporter.gd  EventLog.gd  FreenetDMQueue.gd  GameConfig.gd  GameVersion.gd  IslandRegistry.gd  NetworkManager.gd  PlayerIdentity.gd  ProcessManager.gd  RecipeRegistry.gd  StructureRegistry.gd  TileRegistry.gd
backend/: IBackend.gd
backend/freenet/contracts/version-manifest/: Cargo.toml
backend/freenet/contracts/version-manifest/src/: lib.rs
backend/freenet/proxy/: Cargo.toml
backend/freenet/proxy/src/: lib.rs  main.rs
backend/freenet/proxy/tests/: round_trip.rs
backend/freenet/report/: Cargo.toml
backend/freenet/report/src/: main.rs
dev/: GymPlayer.gd  GymScene.gd  GymScene.tscn  InMemoryBackend.gd  PerfTortureTests.gd  Puppet.gd  PuppetCluster.gd  PuppetCluster.tscn  RenderGym.gd  RenderGym.tscn  build.sh  play-remote.sh  play.sh  run-scenario.sh
docs/: architecture.md  design_decisions.md  dev_testing.md  freenet_retrospective.md  game_design.md  known_issues.md  modding_design.md  multiplayer_testing.md  onboarding.md  phase_0_1_plan.md  research_synthesis.md  version_compatibility.md
items/: CraftingSystem.gd  EquipmentInventory.gd  EquipmentRegistry.gd  Inventory.gd  Item.gd  ItemDefinition.gd  ItemRegistry.gd
mods/: BoundaryEnforcer.gd  BuffManager.gd  ModBundle.gd  ModEditor.gd  ModRuntime.gd  ShrineManager.gd  ShrineObject.gd  ShrineTerritory.gd  StatusEffectSystem.gd
multiplayer/: ChatRPC.gd
networking/: BridgeFormation.gd  FreenetPresenceService.gd  FreenetSignaling.gd  LocalPresenceService.gd  MergeCoordinator.gd  MergeHandshake.gd  MergePressureSystem.gd  MergeRPCBus.gd  RegionAuthority.gd  SessionManager.gd  SplitDetector.gd  TalismanItem.gd  TileMutationBus.gd  UDPPresenceService.gd  WebRTCManager.gd
player/: AssetPack.gd  CharacterAppearance.gd  CharacterRenderer.gd  Lantern.gd  (+6 more)
(+489 files in other folders)
