[package]
name = "commons-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "commons-proxy"
path = "src/main.rs"

[[bin]]
name = "commons-dev-proxy"
path = "src/bin/dev_proxy.rs"

[lib]
name = "commons_proxy"
path = "src/lib.rs"

[features]
# Enable with: cargo test --features integration
# Requires FREENET_NODE_URL pointing to a running local node
# and COMMONS_CONTRACT_PATH pointing to a built contract package.
integration = []

[dependencies]
freenet-stdlib = { version = "0.6.0", features = ["net"] }
commons-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27.0"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
anyhow = "1"
