[package]
name = "freeland-report"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "freeland-report"
path = "src/main.rs"

[dependencies]
freenet-stdlib = { version = "0.6.0", features = ["net"] }
freeland-error-contract = { path = "../contracts/error-contract" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["std"] }
clap = { version = "4", features = ["derive"] }
