[package]
name = "commons-version-manifest"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
freenet-main-contract = []

[dependencies]
freenet-stdlib = { version = "0.6.0", features = ["contract"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
